--- a/package.json
+++ b/package.json
@@ -25,34 +25,45 @@
     ]
   },
   "dependencies": {
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "@blueprintjs/core": "^3.6.0",
+    "apollo-boost": "^0.1.16",
+    "apollo-link-ws": "^1.0.8",
+    "apollo-upload-client": "^8.1.0",
+    "apollo-utilities": "^1.0.21",
+    "formik": "^1.3.0",
+    "react": "^16.5.1",
+    "react-apollo": "^2.1.11",
+    "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.0-next.3e165448"
+    "react-scripts": "2.0.0-next.3e165448",
+    "subscriptions-transport-ws": "^0.9.14",
+    "yup": "^0.25.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
     "@storybook/addon-actions": "^4.0.0-alpha.20",
     "@storybook/addon-links": "^4.0.0-alpha.20",
     "@storybook/addons": "^4.0.0-alpha.20",
     "@storybook/react": "^4.0.0-alpha.20",
+    "@types/apollo-upload-client": "^8.1.0",
     "@types/enzyme": "^3.1.13",
     "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/jest": "^23.3.1",
-    "@types/react": "^16.4.13",
+    "@types/jest": "^23.3.2",
+    "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-router-dom": "^4.3.0",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-links": "^3.3.2",
     "@types/storybook__react": "^3.0.9",
-    "babel-core": "^6.26.3",
+    "@types/yup": "^0.24.9",
     "babel-loader": "^8.0.0-beta.6",
     "babel-runtime": "^6.26.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "jest-enzyme": "^6.0.4",
-    "react-test-renderer": "^16.5.0",
-    "ts-loader": "^5.0.0",
+    "react-test-renderer": "^16.5.1",
+    "ts-loader": "^5.1.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.0.3"
